fix submission edit link, improve spacing for expanded table

--- a/jsapp/scss/components/_kobo.modal.scss
+++ b/jsapp/scss/components/_kobo.modal.scss
@@ -120,7 +120,7 @@
   }
   .form-modal {
     text-align: right;
-    padding: 20px 0px;
+    padding-bottom: 20px;
   }
   table {
     border: 1px solid #F6F6F6;
