--- a/jsapp/scss/components/_kobo.table.scss
+++ b/jsapp/scss/components/_kobo.table.scss
@@ -88,3 +88,10 @@
     }
   }
 }
+
+.page-wrapper--header-hidden.page-wrapper--drawer-hidden {
+  .form-view--table {
+    padding: 0px 30px;
+    overflow: hidden;
+  }
+}
